torch accelerator update

--- a/nrm2.ipynb
+++ b/nrm2.ipynb
@@ -30,17 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using CUDA device: AMD Instinct MI210\n",
+      "Detected accelerator: cuda\n",
       "\n",
       "Input tensor size: 98432 elements\n",
-      "Using fixed BLOCK_SIZE for kernels: 256\n"
+      "First 10 elements of input tensor: tensor([-1.3399,  0.9823, -0.1188,  0.0460, -0.1024,  1.7807, -0.6536, -0.7665,\n",
+      "        -0.2846, -0.3786], device='cuda:0')\n",
+      "Using fixed BLOCK_SIZE for non-autotuned kernels: 256\n"
      ]
     }
    ],
@@ -51,20 +53,22 @@
     "import numpy as np\n",
     "import math\n",
     "\n",
-    "# check for CUDA device\n",
-    "if not torch.cuda.is_available():\n",
+    "# check for accelerator\n",
+    "if not torch.accelerator.is_available():\n",
     "    raise RuntimeError(\"CUDA is not available. This notebook requires a GPU.\")\n",
-    "print(f\"Using CUDA device: {torch.cuda.get_device_name(0)}\")\n",
+    "accelerator = torch.accelerator.current_accelerator()\n",
+    "print(f\"Detected accelerator: {accelerator}\")\n",
     "\n",
     "# input tensor\n",
     "SIZE = 98432\n",
-    "x_torch = torch.randn(SIZE, device='cuda', dtype=torch.float32)\n",
+    "x_torch = torch.randn(SIZE, device=accelerator, dtype=torch.float32)\n",
     "\n",
     "# fixed block size for demonstration (only autotuning in atomic add example)\n",
     "BLOCK_SIZE = 256\n",
     "\n",
     "print(f\"\\nInput tensor size: {SIZE} elements\")\n",
-    "print(f\"Using fixed BLOCK_SIZE for kernels: {BLOCK_SIZE}\")\n"
+    "print(f\"First 10 elements of input tensor: {x_torch[:10]}\")\n",
+    "print(f\"Using fixed BLOCK_SIZE for non-autotuned kernels: {BLOCK_SIZE}\")\n"
    ]
   },
   {
@@ -97,15 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kernel output: tensor([15.8158], device='cuda:0') (nrm2 of only one block because of misadventure)\n",
-      "Correct output: 314.4841613769531\n",
+      "Kernel output: tensor([16.3524], device='cuda:0') (nrm2 of only one block because of misadventure)\n",
+      "Correct output: 313.6213073730469\n",
       "Number of blocks:  385\n",
       "Lesson: `tl.sum()` is a local reduction primitive, not a global one across all blocks, so this does not output the desired L2 norm.\n"
      ]
@@ -141,7 +145,7 @@
     "\n",
     "# test to show output is not a single global sum\n",
     "num_blocks = triton.cdiv(SIZE, BLOCK_SIZE)\n",
-    "results = torch.zeros(1, device='cuda', dtype=torch.float32)\n",
+    "results = torch.zeros(1, device=accelerator, dtype=torch.float32)\n",
     "\n",
     "try:\n",
     "    global_sum_misadventure[(num_blocks,)](\n",
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -175,16 +179,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Demonstrating `tl.atomic_add` accumulation issue with autotuner\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True sum of squares (torch.sum(x*x)): 98900.296875\n",
-      "Autotuned result: 127278880.000000\n",
-      "Autotuned result is 1286.94x the true sum of squares.\n",
+      "Demonstrating `tl.atomic_add` accumulation issue with autotuner\n",
+      "True sum of squares (torch.sum(x*x)): 98358.335938\n",
+      "Autotuned result: 124440184.000000\n",
+      "Autotuned result is 1265.17x the true sum of squares.\n",
       "The autotuner tested multiple configurations and accumulated ALL results!\n",
       "\n",
       "Lesson: While `atomic_add` ensures concurrent writes are safe, it does not reset state.\n",
@@ -194,7 +192,6 @@
     }
    ],
    "source": [
-    "# Autotuned version to demonstrate the accumulation problem\n",
     "@triton.autotune(\n",
     "    configs=[\n",
     "        triton.Config({'BLOCK_SIZE': 64}),\n",
@@ -228,21 +225,21 @@
     "    tl.atomic_add(output_ptr, partial) \n",
     "\n",
     "\n",
-    "# Test setup for Attempt 3.2\n",
+    "# test\n",
     "print(\"\\nDemonstrating `tl.atomic_add` accumulation issue with autotuner\")\n",
     "\n",
-    "# Show the autotuned version accumulation problem\n",
-    "global_result_autotuned = torch.zeros(1, device='cuda', dtype=torch.float32)\n",
-    "max_blocks_autotuned = triton.cdiv(SIZE, 64)\n",
+    "# show the autotuned accumulation problem\n",
+    "global_result = torch.zeros(1, device=accelerator, dtype=torch.float32)\n",
+    "max_blocks = triton.cdiv(SIZE, 64)\n",
     "\n",
     "try:\n",
-    "    atomic_sum_misadventure[(max_blocks_autotuned,)](\n",
-    "        x_torch, global_result_autotuned, SIZE\n",
+    "    atomic_sum_misadventure[(max_blocks,)](\n",
+    "        x_torch, global_result, SIZE\n",
     "    )    \n",
     "    true_sum_of_squares = torch.sum(x_torch * x_torch).item()\n",
     "    print(f\"True sum of squares (torch.sum(x*x)): {true_sum_of_squares:.6f}\")\n",
-    "    print(f\"Autotuned result: {global_result_autotuned.item():.6f}\")\n",
-    "    print(f\"Autotuned result is {global_result_autotuned.item() / true_sum_of_squares:.2f}x the true sum of squares.\")\n",
+    "    print(f\"Autotuned result: {global_result.item():.6f}\")\n",
+    "    print(f\"Autotuned result is {global_result.item() / true_sum_of_squares:.2f}x the true sum of squares.\")\n",
     "    print(\"The autotuner tested multiple configurations and accumulated ALL results!\")\n",
     "    \n",
     "except Exception as e:\n",
@@ -268,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +296,7 @@
     "    sum_of_squares = tl.sum(x * x) \n",
     "    \n",
     "    # no atomic needed here and safe with autotuning, as each program writes to a distinct memory address.\n",
-    "    tl.store(partial_ptr + pid, sum_of_squares)\n"
+    "    tl.store(partial_ptr + pid, sum_of_squares)"
    ]
   },
   {
@@ -313,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,9 +327,7 @@
     "        partial_val = tl.load(partial_ptr + i)\n",
     "        total += partial_val\n",
     "        \n",
-    "    tl.store(final_ptr, total)\n",
-    "\n",
-    "    \n"
+    "    tl.store(final_ptr, total)"
    ]
   },
   {
@@ -346,15 +341,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True L2 Norm (torch.linalg.norm): 314.484161\n",
-      "Triton nrm2 custom kernel result: 314.484253\n",
+      "True L2 Norm (torch.linalg.norm): 313.621307\n",
+      "Triton nrm2 custom kernel result: 313.621368\n",
       "Correct!\n"
      ]
     }
@@ -394,7 +389,7 @@
     "print(f\"Triton nrm2 custom kernel result: {result_nrm2_custom.item():.6f}\")\n",
     "\n",
     "assert math.isclose(result_nrm2_custom.item(), true_norm, rel_tol=1e-5), \"Triton nrm2 result does not match torch.norm!\"\n",
-    "print(\"Correct!\")\n"
+    "print(\"Correct!\")"
    ]
   },
   {
